<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height= "match_parent"
    android:layout_width= "match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center_horizontal"
            android:text="@string/intro" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:ems="10"
            android:hint="Enter Your Name Here"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/select"
            android:layout_width="313dp"
            android:layout_height="64dp"
            android:gravity="center"
            android:text="Select from 5 Precautionary Measures" />

        <CheckBox
            android:id="@+id/precaution1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1" />

        <CheckBox
            android:id="@+id/precaution2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2" />

        <CheckBox
            android:id="@+id/precaution3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3" />

        <CheckBox
            android:id="@+id/precaution4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4" />

        <CheckBox
            android:id="@+id/precaution5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5" />

        <TextView
            android:id="@+id/displaysafe"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal" />

        <LinearLayout
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="Clear" />

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Submit" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
